[project]
name = "copairs"
version = "0.4.3"
description = "Find pairs and compute metrics between them"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pairwise", "replication"]
authors = [
  { name = "John Arevalo", email = "johnarevalo@gmail.com" },
  { name = "Alexandr Kalinin", email = "akalinin@broadinstitute.org" }
]
dependencies = [
  "pandas",
  "tqdm",
  "statsmodels"
]

[project.optional-dependencies]
dev = ["ruff"]
plot = ["plotly"]
test = ["scikit-learn", "pytest"]
demo = ["notebook", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/cytomining/copairs"
"Bug Reports" = "https://github.com/cytomining/copairs/issues"
"Source" = "https://github.com/cytomining/copairs/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
