[project]
name = "copairs"
version = "0.5.0"
description = "Find pairs and compute metrics between them"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pairwise", "replication"]
authors = [
  { name = "John Arevalo", email = "johnarevalo@gmail.com" },
  { name = "Alexandr Kalinin", email = "akalinin@broadinstitute.org" },
  { name = "Alan F. Munoz", email = "amunozgo@broadinstitute.org" }
]
dependencies = [
  "pandas",
  "tqdm",
  "statsmodels",
  "duckdb>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "ruff",
]
plot = ["plotly"]
test = ["scikit-learn", "pytest"]
demo = ["notebook", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/cytomining/copairs"
"Bug Reports" = "https://github.com/cytomining/copairs/issues"
"Source" = "https://github.com/cytomining/copairs/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "trepan3k>=1.3.1",
]
test = [
    "pytest>=8.3.4",
    "scikit-learn>=1.3.2",
]
